--- a/base/backend/deployment/deploy-image-recommendation-server.yml
+++ b/base/backend/deployment/deploy-image-recommendation-server.yml
@@ -22,6 +22,6 @@ spec:
     spec:
       containers:
       - name: image-recommendation-server
-        image: 629515838455.dkr.ecr.us-east-1.amazonaws.com/kea-004-onlog-image-recommendation-server:latest
+        image: 629515838455.dkr.ecr.us-east-1.amazonaws.com/kea-004-onlog-image-recommendation-server:3
         ports:
         - containerPort: 80
