feat: Limit revision history of deployment for front
Replica 수 제한

--- a/base/frontend/deployment/deploy-onlog-front.yaml
+++ b/base/frontend/deployment/deploy-onlog-front.yaml
@@ -8,6 +8,7 @@ metadata:
     tier: frontend
 spec:
   replicas: 3
+  revisionHistoryLimit: 6
   selector:
     matchLabels:
       app: onlog-front
