--- a/base/backend/deployment/deploy-image-recommendation-server.yml
+++ b/base/backend/deployment/deploy-image-recommendation-server.yml
@@ -18,6 +18,7 @@ spec:
       labels:
         app: onlog-image-recommendation
         tier: backend
+        common: onlog
         
     spec:
       containers:
